--- a/conf/config.properties
+++ b/conf/config.properties
@@ -1,9 +1,9 @@
-#Stored on Mon Dec 03 17:25:34 CET 2018
-#Mon Dec 03 17:25:34 CET 2018
-fx.area.font.size=12
+#Stored on Mon Dec 10 08:30:55 CET 2018
+#Mon Dec 10 08:30:55 CET 2018
 fx.title=SBI Worker 2019
-fx.recent.notes=conf\\recent_notes.xml
+fx.area.font.size=12
 fx.height=658.0
-fx.storage=\\\\msfshome\\st002841$\\MyDocuments\\Activities\\2018-12-03_tasks
+fx.recent.notes=conf\\recent_notes.xml
+fx.storage=D\:\\DBI\\Activities\\2018-12-10_Java
 fx.area.font=Quicksand-Regular.ttf
 fx.width=975.0
